Change Log:

**9/16/16**
- Added Oculus Ring. Can be selected by player (worn or in cube), follower and/or other players. If multiple rings are specified, the buff is averaged (weighted by % uptime).

**9/14/16**
- Added "Max Hit" table that shows the maximum damage possible for each attack

**8/24/16**
- Fixed base hatred regen to be 4/second
- When importing a hero, if the paragon level is >= 797 and Karlei's Point is equipped, Paragon Hatred Points will be set to 50
- When importing a hero, if the paragon level is >= 798, all offensive Paragon points will be set to 50 
- When importing a hero, if the paragon level is >= 800 then Paragon RCR and Paragon AD points will be set to 50
- Moved Paragon Points to the Import panel, so that paragon points can easily be set before/after importing a hero
- Added paragon level input field (this will default to 0 until you import a hero)
- Added a "Fill" button on the paragon panel to fill the offensive paragon points, based on paragon level and desired priorities. Added up/down buttons for each type, defaults to order displayed in-game. Pressing the Fill button will allocate paragon points into each of the 4 offensive stats, based on the priority order shown in the calculator (top to bottom).
- Added a graph for the simulation log output

**8/16/16**
- Streamlined user interface (moved all panels in tab controls)

**8/15/16**
- Added support for socketed Topaz in Helm (RCR)

**8/3/16**
- Updated for patch 2.4.2:
-- Companion/Wolf reduced from 30% to 15%
-- Marked for Death reduced from 20% to 15%
-- Calamity now uses your selected MfD rune and does not stack with other MfDs
-- Added The Demon's Demise mechanics
-- Added 2.4.2 Spike Trap Mechanics

**7/12/16**
-- Fixed Endless Walk buff to be Multiplicative

**7/11/16**