@@ -59,7 +59,11 @@ public class ActionEvent extends Event {
 	private final boolean bots;
 	private final boolean karleis;
 	private final double karleisHatred;
+	private final SpenderLogic spenderLogic;
+	private final GeneratorLogic generatorLogic;
 	private SpikeTrapActionEvent spikeTrap;
+	private final double maxHatred;
+	private final boolean hasIllWill;
 
 	public ActionEvent(CharacterData data) {
 		this.hand = Hand.MainHand;
@@ -78,18 +82,24 @@ public class ActionEvent extends Event {
 		this.bots = data.isBotS();
 		this.venRune = data.getSkills().get(ActiveSkill.Vengeance);
 		this.karleis = data.isKarleis();
-		
+		this.spenderLogic = data.getSpenderLogic();
+		this.generatorLogic = data.getGeneratorLogic();
+		this.maxHatred = data.getMaxHatred();
+		this.hasIllWill = data.isIllWill();
+
 		this.markedAmount = 4.0 + (data.isHexingPants() ? ((4.0 * data
 				.getPercentMoving() * .25) - (4.0 * (1.0 - data
 				.getPercentMoving()) * data.getHexingPantsPercent())) : 0.0);
 
-		this.karleisHatred = data.getKarlieshatred() +  (data.isHexingPants() ? ((data.getKarlieshatred() * data
-				.getPercentMoving() * .25) - (data.getKarlieshatred() * (1.0 - data
-				.getPercentMoving()) * data.getHexingPantsPercent())) : 0.0);
-				
+		this.karleisHatred = data.getKarlieshatred()
+				+ (data.isHexingPants() ? ((data.getKarlieshatred()
+						* data.getPercentMoving() * .25) - (data
+						.getKarlieshatred() * (1.0 - data.getPercentMoving()) * data
+						.getHexingPantsPercent())) : 0.0);
+
 		this.mainHandAps = data.getAps();
 		this.delay = data.getDelay() / 1000.0;
-		
+
 		this.mainHandInterval = (1.0 / mainHandAps) + delay;
 
 		this.hasOffHand = data.getOffHand_weaponType() != null;
@@ -109,13 +119,13 @@ public class ActionEvent extends Event {
 						Rune.Ball_Lightning);
 
 		}
-		
+
 		esRune = data.getSkills().get(ActiveSkill.ES);
 
 		if (this.odysseys && (esRune != null)) {
 			esDuration = (esRune == Rune.Heavy_Burden ? 4.0 : 2.0);
 		}
-		
+
 		for (Map.Entry<ActiveSkill, Rune> e : data.getSkills().entrySet()) {
 			ActiveSkill skill = e.getKey();
 			SkillType type = skill.getSkillType();
@@ -142,8 +152,8 @@ public class ActionEvent extends Event {
 		}
 
 		Collections.sort(skills, new SkillAndRune.HatredSorter(data));
-		
-		if (data.isSpikeTrap()) 
+
+		if (data.isSpikeTrap())
 			spikeTrap = new SpikeTrapActionEvent(data);
 		else
 			spikeTrap = null;
@@ -158,12 +168,12 @@ public class ActionEvent extends Event {
 
 		if (spikeTrap != null) {
 			int qty = spikeTrap.getQtyAvailable(state);
-			
+
 			if (qty > 0) {
 				selected = spikeTrap.getSkillAndRune();
 			}
 		}
-		
+
 		double interval = (this.hand == Hand.MainHand) ? mainHandInterval
 				: offHandInterval;
 		double t = this.time;
@@ -173,65 +183,71 @@ public class ActionEvent extends Event {
 
 		if (selected == null) {
 			if (this.odysseys && (esRune != null)) {
-				
-				BuffState oeBuff = state.getBuffs().getBuffs().get(Buff.OdysseysEnd);
-				
+
+				BuffState oeBuff = state.getBuffs().getBuffs()
+						.get(Buff.OdysseysEnd);
+
 				if ((oeBuff == null) || ((t + interval) >= oeBuff.getExpires())) {
 					selected = new SkillAndRune(ActiveSkill.ES, esRune);
 				}
 			}
-			
+
 			if (bastions) {
 				double bwgExpires = state.getBuffs().getBuffs().get(Buff.BwGen)
 						.getExpires();
-				double bwsExpires = state.getBuffs().getBuffs().get(Buff.BwSpend)
-						.getExpires();
-	
+				double bwsExpires = state.getBuffs().getBuffs()
+						.get(Buff.BwSpend).getExpires();
+
 				if ((t + interval) >= bwgExpires) {
 					selected = generator;
 				}
-	
+
 				if ((t + interval) >= bwsExpires) {
-	
+
 					if (spender != null) {
 						double h = spender.getHatred(state.getData());
-	
+
 						if (h <= hatred) {
 							selected = spender;
 						}
 					}
 				}
 			}
-	
+
 			if ((selected == null) && kridershot && meticulousBolts
 					&& (generator != null)
 					&& (generator.getSkill() == ActiveSkill.EA)
 					&& (generator.getRune() == Rune.Ball_Lightning)) {
 				selected = generator;
 			}
-	
+
+			if ((selected == null) && (generator != null) && (spenderLogic == SpenderLogic.FullHatred) && (hatred < maxHatred))
+				selected = generator;
+			
 			if (selected == null) {
 				for (SkillAndRune skr : skills) {
 					double h = skr.getHatred(state.getData());
-	
+
 					if ((h + hatred) >= 0) {
 						selected = skr;
 						break;
 					}
+
 				}
 			}
 		}
 
 		if (selected != null) {
-			
+
 			state.setLastAttack(selected);
-			
+
 			String botsLog = null;
-			
-			if (selected.getSkill() != ActiveSkill.ST) { 
+
+			if (selected.getSkill() != ActiveSkill.ST) {
 				if (bots) {
-					TargetHolder target = state.getTargets().getTarget(TargetType.Primary);
-					
+					TargetHolder target = state.getTargets().getTarget(
+							TargetType.Primary);
+
 					if (target.isAlive() && (target.getNextBots() <= t)) {
 						target.setBotsStacks(target.getBotsStacks() + 1);
 						target.setNextBots(t + 0.3);
@@ -243,17 +259,18 @@ public class ActionEvent extends Event {
 			Breakpoint.Data bpData = this.getBpData(selected.getSkill(), hand);
 
 			double actualInterval = bpData.interval + this.delay;
-			
+
 			if (this.yangs && (selected.getSkill() == ActiveSkill.MS)) {
 				actualInterval = (bpData.interval / 1.5) + this.delay;
-			} 
-			
-			if (this.huntersWrath && (selected.getSkill().getSkillType() == SkillType.Primary)) {
+			}
+
+			if (this.huntersWrath
+					&& (selected.getSkill().getSkillType() == SkillType.Primary)) {
 				actualInterval = (bpData.interval / 1.3) + this.delay;
 			}
-			
+
 			state.setLastAps(1.0 / actualInterval);
-			
+
 			this.time += actualInterval;
 
 			double h = selected.getHatred(state.getData());
@@ -263,7 +280,7 @@ public class ActionEvent extends Event {
 			if (this.odysseys && (selected.getSkill() == ActiveSkill.ES)) {
 				state.getBuffs().set(Buff.OdysseysEnd, t + this.esDuration);
 			}
-			
+
 			if (bastions) {
 				if (h < 0) {
 					state.getBuffs().set(Buff.BwSpend, t + 5.0);
@@ -274,18 +291,20 @@ public class ActionEvent extends Event {
 			}
 
 			List<Damage> dList = new Vector<Damage>();
-			
+
 			if (selected.getSkill() == ActiveSkill.ST) {
 				spikeTrap.execute(queue, log, state);
 			} else {
-				dList = DamageFunction.getDamages(true, false,
+				dList = DamageFunction.getDamages(
+						true,
+						false,
 						"Player",
-						new DamageSource(selected.getSkill(), selected.getRune()),
-						state);
-				
+						new DamageSource(selected.getSkill(), selected
+								.getRune()), state);
+
 				boolean wasSpender = false;
 				boolean wasGenerator = false;
-				
+
 				if (selected.getSkill().getSkillType() == SkillType.Primary)
 					wasGenerator = true;
 				else if (selected.getSkill().getSkillType() == SkillType.Spender) {
@@ -293,32 +312,33 @@ public class ActionEvent extends Event {
 						wasSpender = true;
 					else
 						wasGenerator = true;
-					
+
 				}
 				for (Damage d : dList) {
-					
+
 					if ((botsLog != null) && (d.target == TargetType.Primary)) {
 						d.note += botsLog;
 						botsLog = null;
 					}
-					
+
 					if (d.hatred > 0)
 						d.hatred = actualHatred;
 				}
-				
+
 				applyDamages(state, log, dList);
-	
+
 				if (state.hasSpikeTraps()) {
 					Rune r = state.getData().getSpikeTrapRune();
-					
-					if (((r == Rune.Custom_Trigger) && wasGenerator) || ((r != Rune.Custom_Trigger) && wasSpender)) {
+
+					if (((r == Rune.Custom_Trigger) && wasGenerator)
+							|| ((r != Rune.Custom_Trigger) && wasSpender)) {
 						state.detonateTraps(queue, log);
 					}
 				}
-				
+
 				if (ue2 && (h > 0)) {
 					double actual = state.addDisc(1.0);
-	
+
 					if (actual > 0) {
 						Damage d = new Damage();
 						d.time = state.getTime();
@@ -330,9 +350,10 @@ public class ActionEvent extends Event {
 						log.add(d);
 					}
 				}
-	
-				if (m4 && (selected.getSkill().getSkillType() == SkillType.Spender)) {
-					
+
+				if (m4
+						&& (selected.getSkill().getSkillType() == SkillType.Spender)) {
+
 					List<Damage> sList = DamageFunction.getDamages(false, true,
 							"Sentry", new DamageSource(selected.getSkill(),
 									selected.getRune()), state);
@@ -340,15 +361,15 @@ public class ActionEvent extends Event {
 					state.setLastSpenderTime(t);
 					dList.addAll(sList);
 				}
-	
+
 				if (mortalEnemy
 						&& (state.getBuffs().isActive(Buff.MfdPrimary) || state
 								.getBuffs().isActive(Buff.MfdAdditional))) {
-	
+
 					double mh = state.addHatred(markedAmount);
-	
+
 					if (mh > 0) {
-	
+
 						Damage d = new Damage();
 						d.shooter = "Player";
 						d.source = new DamageSource(ActiveSkill.MFD,
@@ -361,17 +382,17 @@ public class ActionEvent extends Event {
 						log.add(d);
 					}
 				}
-	
-				if (karleis
-						&& (selected.getSkill() == ActiveSkill.IMP)) {
-	
+
+				if (karleis && (selected.getSkill() == ActiveSkill.IMP)) {
+
 					double mh = state.addHatred(karleisHatred);
-	
+
 					if (mh > 0) {
-	
+
 						Damage d = new Damage();
 						d.shooter = "Player";
-						d.source = new DamageSource(selected.getSkill(), selected.getRune());
+						d.source = new DamageSource(selected.getSkill(),
+								selected.getRune());
 						d.hatred = mh;
 						d.time = t;
 						d.note = "Karlei's Point Hatred";
@@ -393,15 +414,14 @@ public class ActionEvent extends Event {
 
 			if (state.getData().isSashOfKnives()) {
 				List<Damage> l2 = DamageFunction.getDamages(true, false,
-						"Sash of Knives",
-						new DamageSource(ActiveSkill.SoK, Rune.None),
-						state);
+						"Sash of Knives", new DamageSource(ActiveSkill.SoK,
+								Rune.None), state);
 				applyDamages(state, log, l2);
 				dList.addAll(l2);
 			}
-			
+
 			if (n2 && (rov != null)) {
-				
+
 				if (rov.getTime() > this.time) {
 					queue.remove(rov);
 					rov.setTime(Math.max(rov.getTime() - 4.0, this.time));
@@ -410,17 +430,19 @@ public class ActionEvent extends Event {
 			}
 
 			Set<TargetType> targetsHit = new TreeSet<TargetType>();
-			
+
 			for (Damage d : dList) {
-				if ((d.target != null) && (d.damage > 0) && state.getTargets().getTarget(d.target).isAlive())
+				if ((d.target != null) && (d.damage > 0)
+						&& state.getTargets().getTarget(d.target).isAlive())
 					targetsHit.add(d.target);
 			}
-			
+
 			// Gem procs
 			if (!targetsHit.isEmpty()) {
-				applyDamages(state, log, DamageFunction.getDamages(false, false, "Player", null, state, targetsHit));
+				applyDamages(state, log, DamageFunction.getDamages(false,
+						false, "Player", null, state, targetsHit));
 			}
-			
+
 			if (hasOffHand) {
 				this.hand = (this.hand == Hand.MainHand) ? Hand.OffHand
 						: Hand.MainHand;
@@ -443,23 +465,24 @@ public class ActionEvent extends Event {
 
 	private Breakpoint getBreakpoint(ActiveSkill skill) {
 		Breakpoint bp = bpMap.get(skill);
-		
+
 		if (bp == null) {
 			int frames = skill.getFrames();
-			
+
 			if (frames < 0) {
 				frames = mainHand.getFrames();
 			}
-			
+
 			bp = new Breakpoint(frames);
 			bpMap.put(skill, bp);
 		}
-		
+
 		return bp;
 	}
-	
+
 	private Breakpoint.Data getBpData(ActiveSkill skill, Hand hand) {
-		return getBreakpoint(skill).get((hand == Hand.MainHand) ? this.mainHandAps : this.offHandAps);
+		return getBreakpoint(skill).get(
+				(hand == Hand.MainHand) ? this.mainHandAps : this.offHandAps);
 	}
-	
+
 }
